Python bindings for geometry.box_pack_2d() return invalid total height #39392

Closed
opened 2014-03-24 16:15:52 +01:00 by wrr@mixedbit.org · 6 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)

Short description of error
Box total width is returned as a total height. See this line:
https://developer.blender.org/diffusion/B/browse/master/source/blender/python/mathutils/mathutils_geometry.c;3b68c6304df968c5d27f7276526f3e407519f247$1518

Exact steps for others to reproduce the error
In Python console:

>>> from mathutils import geometry
>>> geometry.box_pack_2d([[0.0, 0.0, 5.0, 10.0, 'id']])
(5.0, 5.0) # The second value should be 10, it is not possible to pack 5x10 box into 5x5 area
**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) **Short description of error** Box total width is returned as a total height. See this line: https://developer.blender.org/diffusion/B/browse/master/source/blender/python/mathutils/mathutils_geometry.c;3b68c6304df968c5d27f7276526f3e407519f247$1518 **Exact steps for others to reproduce the error** In Python console: ``` >>> from mathutils import geometry >>> geometry.box_pack_2d([[0.0, 0.0, 5.0, 10.0, 'id']]) (5.0, 5.0) # The second value should be 10, it is not possible to pack 5x10 box into 5x5 area ```

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jan.wrobel

Added subscriber: @jan.wrobel

This issue was referenced by blender/blender-addons-contrib@e9a64e2770

This issue was referenced by blender/blender-addons-contrib@e9a64e27706721105530f82307e36cc45930531d

This issue was referenced by e9a64e2770

This issue was referenced by e9a64e27706721105530f82307e36cc45930531d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e9a64e2770.

Closed by commit e9a64e2770.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39392
No description provided.