Fix T39392: Python bindings for geometry.box_pack_2d() return invalid total height